# monostich

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  README.md  architecture.md  claude.md  compose.yaml  gameplan.md  middleware.ts  package-lock.json  package.json  principles.md  proxy.ts
.github/workflows/: ci.yml
.postman/: resources.yaml
app/: globals.css  page.tsx
app/(auth)/: layout.tsx
app/(auth)/confirm/: route.ts
app/(auth)/login/: LoginForm.tsx  page.tsx
app/(auth)/signup/: SignupForm.tsx  page.tsx
app/(main)/: layout.tsx  page.tsx
app/(main)/create/: PoemCreator.tsx  Tile.tsx  page.tsx
app/(main)/my_poems/: page.tsx
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ed0429781b95_create_users_table.py
backend/db/: model.py  session.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.js  index.js
client/src/assets/: theme.js
client/src/utils/: auth.js  (+2 more)
frontend/: dockerfile  package.json
frontend/src/: App.tsx
lib/actions/: auth.ts
lib/definitions/: auth.ts
lib/supabase/: proxy.ts  server.ts
server/: package-lock.json  package.json  server.js
server/config/: connection.js
server/models/: Poem.js  User.js  index.js
server/schemas/: resolvers.js  typeDefs.js
server/utils/: auth.js
supabase/: config.toml  seed.sql
supabase/migrations/: 20251228061301_initial_schema.sql  20260109193802_create_table_poem_word.sql  20260109200756_drop_words_text_unique.sql  20260109215016_function_get_random_words.sql
types/: database.types.ts  index.ts
(+19 files in other folders)
